allow numbers only for variables